// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSteps Snap render AtSteps -- props className 1`] = `
<view
  class="at-steps"
>
  
  
</view>
`;

exports[`AtSteps Snap render AtSteps -- props current 1`] = `
<view
  class="at-steps"
>
  
  <view
    class="at-steps__item at-steps__item--inactive"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <!--v-if-->
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-icon-sound at-icon at-steps__circle-icon"
        />
      </view>
      <!-- right line -->
      <view
        class="at-steps__right-line"
      />
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤一
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  <view
    class="at-steps__item at-steps__item--active"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <view
        class="at-steps__left-line"
      />
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-icon-shopping-cart at-icon at-steps__circle-icon"
        />
      </view>
      <!-- right line -->
      <view
        class="at-steps__right-line"
      />
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤二
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  <view
    class="at-steps__item at-steps__item--inactive"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <view
        class="at-steps__left-line"
      />
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-icon-camera at-icon at-steps__circle-icon"
        />
      </view>
      <!-- right line -->
      <!--v-if-->
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤三
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  
</view>
`;

exports[`AtSteps Snap render AtSteps -- props customStyle 1`] = `
<view
  class="at-steps"
  customstyle="color:red;"
>
  
  
</view>
`;

exports[`AtSteps Snap render AtSteps -- props items 1`] = `
<view
  class="at-steps"
>
  
  <view
    class="at-steps__item at-steps__item--active"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <!--v-if-->
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-icon-sound at-icon at-steps__circle-icon"
        />
      </view>
      <!-- right line -->
      <view
        class="at-steps__right-line"
      />
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤一
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  <view
    class="at-steps__item at-steps__item--inactive"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <view
        class="at-steps__left-line"
      />
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-icon-shopping-cart at-icon at-steps__circle-icon"
        />
      </view>
      <!-- right line -->
      <view
        class="at-steps__right-line"
      />
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤二
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  <view
    class="at-steps__item at-steps__item--inactive"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <view
        class="at-steps__left-line"
      />
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-icon-camera at-icon at-steps__circle-icon"
        />
      </view>
      <!-- right line -->
      <!--v-if-->
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤三
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  
</view>
`;

exports[`AtSteps Snap render AtSteps -- props items 2`] = `
<view
  class="at-steps"
>
  
  <view
    class="at-steps__item at-steps__item--active"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <!--v-if-->
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-steps__num"
        >
          1
        </text>
      </view>
      <!-- right line -->
      <view
        class="at-steps__right-line"
      />
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤一
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  <view
    class="at-steps__item at-steps__item--inactive"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <view
        class="at-steps__left-line"
      />
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-steps__num"
        >
          2
        </text>
      </view>
      <!-- right line -->
      <view
        class="at-steps__right-line"
      />
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤二
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  <view
    class="at-steps__item at-steps__item--inactive"
  >
    <!-- circular wrap -->
    <view
      class="at-steps__circular-wrap"
    >
      <!-- left line -->
      <view
        class="at-steps__left-line"
      />
      <!-- status -->
      <view
        class="at-steps__circular"
      >
        <text
          class="at-steps__num"
        >
          3
        </text>
      </view>
      <!-- right line -->
      <!--v-if-->
    </view>
    <!-- title -->
    <view
      class="at-steps__title"
    >
      步骤三
    </view>
    <!-- desc -->
    <view
      class="at-steps__desc"
    >
      这里是额外的信息，最多两行
    </view>
  </view>
  
</view>
`;

exports[`AtSteps Snap render initial AtSteps 1`] = `
<view
  class="at-steps"
>
  
  
</view>
`;
